outbound tested and working

--- a/credentials.yml
+++ b/credentials.yml
@@ -7,8 +7,8 @@ rest:
 #  # require any credentials
 
 channels.airy.AiryInput:
-  organization_id: "5fe6ce61-c814-4296-9038-00573eedcbb9"
-  secret: "your webhook send token"
+  organization_id: "2236178a-1025-4075-a0d2-c19e672e57d2"
+  secret: "1123e495-3424-4166-bcfc-812be076722e"
 #facebook:
 #  verify: "<verify>"
 #  secret: "<your secret>"
@@ -30,5 +30,5 @@ channels.airy.AiryInput:
 
 # This entry is needed if you are using Rasa X. The entry represents credentials
 # for the Rasa X "channel", i.e. Talk to your bot and Share with guest testers.
-rasa:
-  url: "http://localhost:5002/api"
+#rasa:
+#  url: "http://localhost:5002/api"
