Adapt connector to open source core platform

--- a/credentials.yml
+++ b/credentials.yml
@@ -2,33 +2,6 @@
 # which your bot is using.
 # https://rasa.com/docs/rasa/user-guide/messaging-and-voice-channels/
 
-rest:
-#  # you don't need to provide anything here - this channel doesn't
-#  # require any credentials
-
 channels.airy.AiryInput:
-  organization_id: "7d3f122f-d7fc-4626-9d56-6b062a0ece76"
-  secret: "cedf98ce-e8e0-451d-912b-8aa37bc5d6f0"
-#facebook:
-#  verify: "<verify>"
-#  secret: "<your secret>"
-#  page-access-token: "<your page access token>"
-
-#slack:
-#  slack_token: "<your slack token>"
-#  slack_channel: "<the slack channel>"
-
-#socketio:
-#  user_message_evt: <event name for user message>
-#  bot_message_evt: <event name for but messages>
-#  session_persistence: <true/false>
-
-#mattermost:
-#  url: "https://<mattermost instance>/api/v4"
-#  token: "<bot token>"
-#  webhook_url: "<callback URL>"
-
-# This entry is needed if you are using Rasa X. The entry represents credentials
-# for the Rasa X "channel", i.e. Talk to your bot and Share with guest testers.
-#rasa:
-#  url: "http://localhost:5002/api"
+  api_host: "your jwt authentication token"
+  auth_token: "cedf98ce-e8e0-451d-912b-8aa37bc5d6f0"
