--- a/credentials.yml
+++ b/credentials.yml
@@ -3,5 +3,5 @@
 # https://rasa.com/docs/rasa/user-guide/messaging-and-voice-channels/
 
 channels.airy.AiryInput:
-  api_host: "your jwt authentication token"
-  auth_token: "cedf98ce-e8e0-451d-912b-8aa37bc5d6f0"
+  api_host: "http://api.airy"
+  auth_token: "your airy platform auth token"
