update nlp assistent

--- a/credentials.yml
+++ b/credentials.yml
@@ -3,5 +3,5 @@
 # https://rasa.com/docs/rasa/user-guide/messaging-and-voice-channels/
 
 channels.airy.AiryInput:
-  api_host: "http://api.airy"
-  auth_token: "your airy platform auth token"
+  api_host: "http://airy.core"
+  system_token: "your airy core system api token"
